# Base17

./: .breakpoints  CONTRIBUTING.md  README.md  config.py  constants.py  embed_tpl.py  keep_alive.py  main.py  pyproject.toml  server.py
.github/workflows/: codeql-analysis.yml
cogs/: admin.py  master.py  mining.py  system.py  user.py
cogs/utils/: constants.py  dialogue.py  dlg.py  embed.py  embed_tpl.py  time.py  trm.py
json/: config.json  en-US.json  en.json  game_data.json  pgrm.json  prog.json
