[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
constants = "^0.6.0"
pytz = "^2021.3"
replit = "^3.2.4"
dictdiffer = "^0.9.0"
Flask = "^2.0.3"
"discord.py" = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"